# unit27-proof-ledger

./: .gitignore  DESIGN_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: proof_cases.json
examples/sample-project/: README.md
examples/sample-project/evals/: proof_cases.json
examples/sample-project/outputs/: demo.txt
examples/sample-project/u27/: PROOF_PACKET.md  proof_ledger.json
examples/sample-project/u27/evidence/: run-0001.txt  run-0002.txt
scripts/: verify_wheel.py
src/proof_ledger/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
u27/: BOUNDARY_REGISTER.md  PROOF_PACKET.md  boundary_report.json  proof_ledger.json
u27/evidence/: run-0001.txt  run-0002.txt  run-0003.txt  run-0004.txt
